Removed index splash image from send message page. Added top margin to avoid being overlapped by header.

--- a/css/send_message.css
+++ b/css/send_message.css
@@ -41,3 +41,7 @@ textarea{
 input[type=submit]{
     padding: 10px 20px 10px 20px;
 }
+
+.send-message-container {
+	margin: 110px;
+}
